<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bingo.bingo.activities.CreateAccountActivity">
<LinearLayout
    android:orientation="vertical"
    android:layout_marginTop="60dp"
    android:layout_marginBottom="20dp"
    android:id="@+id/linearhead"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/title_register_activity"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="40sp"
        android:textStyle="bold" />
</LinearLayout>

    <LinearLayout
        android:id="@+id/linearbody"
        android:layout_below="@+id/linearhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_register_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/holo_green_dark" />

        <EditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_register_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/holo_green_dark" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_register_password"
            android:inputType="textPassword"
            android:textColorHint="@color/holo_green_dark" />

        <EditText
            android:id="@+id/etconfirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/holo_green_dark" />

        <EditText
            android:id="@+id/ettelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_register_telephone"
            android:inputType="phone"
            android:textColorHint="@color/holo_green_dark" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/holo_green_dark"
            android:onClick="onCreate"
            android:text="@string/txt_create_account"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>
