<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@android:color/white"
        android:id="@+id/relativeLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/holo_green_dark"
            android:textSize="40sp"
            android:layout_centerVertical="true" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/etPassword"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="26dp"
            android:drawableLeft="@drawable/ic_user"
            android:ems="10"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            tools:hint="@string/hint_username"
            android:textColorHint="@color/holo_green_dark"
            android:backgroundTint="@color/holo_green_dark"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:drawableLeft="@drawable/ic_password"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="@color/holo_green_dark"
            android:backgroundTint="@color/holo_green_dark"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:background="@color/holo_green_dark"
            android:text="@string/txt_Login"
            android:textColor="@android:color/white"
           />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:text="@string/forget_password" />

    </LinearLayout>


</RelativeLayout>
