<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bingo.bingo.fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <LinearLayout
      android:id="@+id/layoutentete"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:layout_marginTop="17dp"
      android:orientation="vertical"
      android:layout_alignParentTop="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:weightSum="1">

      <ImageView
          android:id="@+id/imageView3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:srcCompat="@drawable/entete" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="300dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_marginTop="2dp"
      android:layout_below="@+id/layoutentete"
      android:orientation="vertical"
      android:weightSum="1">


      <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_end_color"
        android:text="USER PROFILE"
        android:textAlignment="center"
        android:textColor="@color/color_facebook"
        android:textStyle="bold"
        tools:text="USER PROFILE" />

      <TextView
        android:id="@+id/tvUsernameProf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/ic_profile"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/hint_username"
        android:textAlignment="center"
        android:textColor="@color/color_facebook"
        android:textSize="15sp" />


      <TextView
        android:id="@+id/tvAdresseProf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_adress"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/hint_business_adress"
        android:textAlignment="center"
        android:textColor="@color/color_facebook"
        android:textSize="15sp" />

      <TextView
        android:id="@+id/tvEmailProf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_business_email"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/hint_business_email"
        android:textAlignment="center"
        android:textColor="@color/color_facebook"
        android:textSize="15sp" />

      <TextView
        android:id="@+id/tvTelephoneProf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_business_phone"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/hint_register_telephone"
        android:textAlignment="center"
        android:textColor="@color/color_facebook"
        android:textSize="15sp"
        tools:text="@string/hint_register_telephone" />

    </LinearLayout>

  </RelativeLayout>
</RelativeLayout>
